--- a/Views/Desaparecido/ListOneDesaparecido.cshtml
+++ b/Views/Desaparecido/ListOneDesaparecido.cshtml
@@ -61,6 +61,6 @@
             <a href="#" class="card-achei">Eu vi esta Pessoa</a>
         </div>
 
-        <a href="#" class="card-denuncia">Denunciar este perfil</a>
+        <a href="~/Denuncias/Create/@ViewBag.DesaparecidoId" class="card-denuncia">Denunciar este perfil</a>
     </div>
 </div>
