--- a/Views/Denuncias/Details.cshtml
+++ b/Views/Denuncias/Details.cshtml
@@ -12,6 +12,22 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Desaparecido.Id)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Desaparecido.Id)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Descricao)
         </dt>
 
@@ -25,30 +41,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.DataDenuncia)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TipoDenuncia)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TipoDenuncia)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.RepostaAdm)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.RepostaAdm)
         </dd>
 
     </dl>
