--- a/Views/Desaparecido/EditarDadosPessoais.cshtml
+++ b/Views/Desaparecido/EditarDadosPessoais.cshtml
@@ -2,103 +2,83 @@
 
 @{
     ViewBag.Title = "EditarDadosPessoais";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Register.cshtml";
 }
-
-<h2>EditarDadosPessoais</h2>
-
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+    <h1 class="title">Atualize os dados pessoais</h1>
+    <p class="subtitle">Mantenha sempre os dados atualizados</p>
     <div class="form-horizontal">
-        <h4>EditarInformacoesPessoais</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+        <div class="form-group form-Box2">
+            @Html.HiddenFor(model => model.Codigo)
+            @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nome" } })
+            @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger mensagem-erro" })
+        </div>
+
+        <div class="form-container">
+            <div class="form-group form-Box">
+                @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control", @placeholder = "CPF" } })
+                @Html.ValidationMessageFor(model => model.Cpf, "", new { @class = "text-danger mensagem-erro" })
+            </div>
+
+            <div class="form-group form-Box">
+                @Html.EditorFor(model => model.Rg, new { htmlAttributes = new { @class = "form-control", @placeholder = "RG" } })
+                @Html.ValidationMessageFor(model => model.Rg, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Cpf, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Cpf, "", new { @class = "text-danger" })
+        <div class="form-container">
+            <div class="form-group form-Box">
+                @Html.EditorFor(model => model.CorOlhos, new { htmlAttributes = new { @class = "form-control", @placeholder = "Cor dos olhos" } })
+                @Html.ValidationMessageFor(model => model.CorOlhos, "", new { @class = "text-danger mensagem-erro" })
+            </div>
+
+            <div class="form-group form-Box">
+                @Html.EditorFor(model => model.CorCabelo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Cor do cabelo" } })
+                @Html.ValidationMessageFor(model => model.CorCabelo, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Rg, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Rg, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Rg, "", new { @class = "text-danger" })
+        <div class="form-container">
+            <div class="form-group form-Box">
+                @Html.TextBoxFor(model => model.DataNascimento, "{0:MM/dd/yyyy}", htmlAttributes: new { @class = "form-control", @type = "date" })
+                @Html.ValidationMessageFor(model => model.CorOlhos, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CorOlhos, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CorOlhos, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CorOlhos, "", new { @class = "text-danger" })
+        <div class="form-container">
+            <div class="form-group form-Box">
+                @Html.EditorFor(model => model.Altura, new { htmlAttributes = new { @class = "form-control", @placeholder = "Altura" } })
+                @Html.ValidationMessageFor(model => model.Altura, "", new { @class = "text-danger mensagem-erro" })
+            </div>
+
+            <div class="form-group form-Box">
+                @Html.EditorFor(model => model.Peso, new { htmlAttributes = new { @class = "form-control", @placeholder = "Peso" } })
+                @Html.ValidationMessageFor(model => model.Peso, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CorCabelo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CorCabelo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CorCabelo, "", new { @class = "text-danger" })
-            </div>
+        <div class="form-group form-Box2">
+            @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control", @placeholder = "Adicione uma breve descrição sobre a pessoa"} })
+            @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger mensagem-erro" })
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Altura, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Altura, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Altura, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Peso, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Peso, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Peso, "", new { @class = "text-danger" })
+        <div class="form-container">
+            <div class="button-Container">
+                @*@Html.ActionLink("Voltar", "Index")*@
+                <input type="button" value="Voltar" onClick="history.go(-1)">
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="button-Container">
+                <input type="submit" value="Salvar alterações" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
