--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<Dory2.Models.Tutorias>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -9,156 +11,34 @@
 <div id="exampleSlider">
     <h2 class="peoples-title">Pessoas Desaparecidas</h2>
     <div class="MS-content">
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Jose</p>
-                <p class="textage">Idade: 38</p>
-            </div>
+        @foreach (var item in Model)
+        {
+            if (item.Ativo)
+            {
+                <div class="item">
+                    <div class="img-perfil">
+                        <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
+                    </div>
+                    <div>
+                        <p class="textname">@Html.DisplayFor(model => item.Pessoa.Nome)</p>
+                        <p class="textage">
+                            @{
+                                DateTime dataInicial = item.Pessoa.DataNascimento;
+                                DateTime dataFinal = DateTime.Now;
+                                int ano = dataFinal.Year;
+                                int anoInicial = dataInicial.Year;
+                                int idade = ano - anoInicial;
+                                string show = idade + " Anos";
 
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil2.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Maria</p>
-                <p class="textage">Idade: 85</p>
-            </div>
+                                @Html.DisplayFor(model => show)
 
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil3.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Mauro</p>
-                <p class="textage">Idade: 12</p>
-            </div>
+                            }
+                        </p>
+                    </div>
+                </div>
+            }
 
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil4.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Ana</p>
-                <p class="textage">Idade: 56</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil5.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Robson</p>
-                <p class="textage">Idade: 65</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil6.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Julia</p>
-                <p class="textage">Idade: 25</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Carlos</p>
-                <p class="textage">Idade: 74</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil2.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Josefina</p>
-                <p class="textage">Idade: 62</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil3.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Gonçalves</p>
-                <p class="textage">Idade: 45</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil4.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Cleide</p>
-                <p class="textage">Idade: 38</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil5.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Roberto</p>
-                <p class="textage">Idade: 36</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil6.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Elisa</p>
-                <p class="textage">Idade: 21</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Enzo</p>
-                <p class="textage">Idade: 5</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil2.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Carla</p>
-                <p class="textage">Idade: 38</p>
-            </div>
-
-        </div>
-        <div class="item">
-            <div class="img-perfil">
-                <img src="~/Images/perfil3.jpg" alt="temp" class="img-perfil" />
-            </div>
-            <div>
-                <p class="textname">Nome: Tiago</p>
-                <p class="textage">Idade: 41</p>
-            </div>
-
-        </div>
+        }
     </div>
     <div class="MS-controls">
         <button class="MS-left"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
@@ -193,7 +73,7 @@
 
 
 <script src="~/Scripts/jquery-2.2.4.min.js"></script>
-<script src="~/Scripts/multislider.js" ></script>
+<script src="~/Scripts/multislider.js"></script>
 
 <script>
     $('#exampleSlider').multislider();
