--- a/Views/Desaparecido/ListOneDesaparecido.cshtml
+++ b/Views/Desaparecido/ListOneDesaparecido.cshtml
@@ -73,8 +73,8 @@
     </div>
     <div class="card-footer">
         <div>
-            <a href="#" class="card-back">Voltar</a>
-            <a href="#" class="card-achei">Eu vi esta Pessoa</a>
+            <input type="button" value="Voltar" onClick="history.go(-1)" class="btn btn-lg btn-default" style="margin-right: 16px">
+            <input type="button" value="Eu vi esta pessoa" class="btn btn-lg btn-primary">
         </div>
 
         <a href="~/Denuncias/Create/@ViewBag.DesaparecidoId" class="card-denuncia">Denunciar este perfil</a>
