--- a/Views/Vulneravels/ListOneVulneravel.cshtml
+++ b/Views/Vulneravels/ListOneVulneravel.cshtml
@@ -73,8 +73,8 @@
     </div>
     <div class="card-footer">
         <div>
-            <a href="#" class="card-back">Voltar</a>
-            <a href="#" class="card-achei">Desapareceu</a>
+            <input type="button" value="Voltar" onClick="history.go(-1)" class="btn btn-lg btn-default" style="margin-right: 16px">
+            <input type="button" value="Desapareceu" class="btn btn-lg btn-danger">
         </div>
     </div>
 </div>
