Exibindo data no editar Lista de etinias Falta acabar

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -74,9 +74,10 @@
 </div>
 
 
-<script src="~/Scripts/jquery-2.2.4.min.js"></script>
+@Scripts.Render("~/bundles/jquery")
 <script src="~/Scripts/multislider.js"></script>
 
 <script>
     $('#exampleSlider').multislider();
+
 </script>
