--- a/Views/Desaparecido/EditarDadosPessoais.cshtml
+++ b/Views/Desaparecido/EditarDadosPessoais.cshtml
@@ -43,8 +43,14 @@
 
         <div class="form-container">
             <div class="form-group form-Box">
-                @Html.TextBoxFor(model => model.DataNascimento, "{0:MM/dd/yyyy}", htmlAttributes: new { @class = "form-control", @type = "date" })
+                @Html.TextBoxFor(model => model.DataNascimento, "{0:yyyy-MM-dd}", htmlAttributes: new { @class = "form-control", @type = "date" })
                 @Html.ValidationMessageFor(model => model.CorOlhos, "", new { @class = "text-danger mensagem-erro" })
+            </div>
+
+            <div class="form-group form-Box">
+                @*@Html.DropDownList( "", EnumHelper.GetSelectList(typeof (EditarInformacoesPessoais.Etinias)), "", new { @class = "form-control" })*@
+                @Html.EnumDropDownListFor(model => model.Cutis, "Selecionar", new { @class = "form-control" } )
+                @Html.ValidationMessageFor(model => model.Cutis, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
