--- a/Views/Desaparecido/EditarDadosPessoais.cshtml
+++ b/Views/Desaparecido/EditarDadosPessoais.cshtml
@@ -19,6 +19,7 @@
 
         <div class="form-container">
             <div class="form-group form-Box">
+                @*@Html.LabelFor(model => model.Cpf, htmlAttributes: new { @class = "control-label" })*@
                 @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control", @placeholder = "CPF" } })
                 @Html.ValidationMessageFor(model => model.Cpf, "", new { @class = "text-danger mensagem-erro" })
             </div>
@@ -48,9 +49,20 @@
             </div>
 
             <div class="form-group form-Box">
-                @*@Html.DropDownList( "", EnumHelper.GetSelectList(typeof (EditarInformacoesPessoais.Etinias)), "", new { @class = "form-control" })*@
-                @Html.EnumDropDownListFor(model => model.Cutis, "Selecionar", new { @class = "form-control" } )
+                @Html.EnumDropDownListFor(model => model.Cutis, "Selecionar", new { @class = "form-control", @style = "min-width: 250px" })
                 @Html.ValidationMessageFor(model => model.Cutis, "", new { @class = "text-danger mensagem-erro" })
+            </div>
+        </div>
+
+        <div class="form-container">
+            <div class="form-group form-Box">
+                @Html.EnumDropDownListFor(model => model.TipoSanguineo, "Selecionar", new { @class = "form-control", @style = "min-width: 250px" })
+                @Html.ValidationMessageFor(model => model.TipoSanguineo, "", new { @class = "text-danger mensagem-erro" })
+            </div>
+
+            <div class="form-group form-Box">
+                @Html.EnumDropDownListFor(model => model.Sexo, "Selecionar", new { @class = "form-control", @style = "min-width: 250px" })
+                @Html.ValidationMessageFor(model => model.Sexo, "", new { @class = "text-danger mensagem-erro" })
             </div>
         </div>
 
@@ -67,7 +79,7 @@
         </div>
 
         <div class="form-group form-Box2">
-            @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control", @placeholder = "Adicione uma breve descrição sobre a pessoa"} })
+            @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control", @placeholder = "Adicione uma breve descrição sobre a pessoa" } })
             @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger mensagem-erro" })
         </div>
 
