Edição de mais infos do desaparecido Ainda nao ta pronto

--- a/Views/Desaparecido/ListOneDesaparecido.cshtml
+++ b/Views/Desaparecido/ListOneDesaparecido.cshtml
@@ -51,7 +51,7 @@
                 if (ViewBag.IsResponsavel)
                 {
                     <p>
-                        @Html.ActionLink("Editar informações do desaparecido", "EditarPerfil", new { id = Model.Id })
+                        @Html.ActionLink("Editar informações do desaparecido", "EditarMaisInfos", new { id = Model.Id })
                     </p>
                 }
             }
