Tela e model pra vi esta pessoa Ainda nao cadastrando

--- a/Views/Desaparecido/ListOneDesaparecido.cshtml
+++ b/Views/Desaparecido/ListOneDesaparecido.cshtml
@@ -74,7 +74,7 @@
     <div class="card-footer">
         <div>
             <input type="button" value="Voltar" onClick="history.go(-1)" class="btn btn-lg btn-default" style="margin-right: 16px">
-            <input type="button" value="Eu vi esta pessoa" class="btn btn-lg btn-primary">
+            <a href="~/Desaparecido/ViEstaPessoa/@Model.Id" class="btn btn-lg btn-primary">Eu vi esta pessoa</a>
         </div>
 
         <a href="~/Denuncias/Create/@ViewBag.DesaparecidoId" class="card-denuncia">Denunciar este perfil</a>
